Pointing to a profile picture of 64 by 64 pixels

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
         <div class="centered raised card">
             <div class="horizontal card-header">
-                <img alt="Author's picture" src="https://i.ibb.co/St4fYcF/picture-square.jpg">    
+                <img alt="Author's picture" src="https://i.ibb.co/ZT7Hr2h/profile-picture-64-64.jpg">    
                 <div class="vertical card-header-title">
                     <div class="primary-text">Logan Farci</div>
                     <div class="secondary-text">Analyst developer</div>
                 </div>
             </div>
             <div class="card-content">
-                <span>This is my future personal website ❤️</span>
+                <span>I am currently an Analyst Developer at Smals seconded the the Belgian National Employment Office (NEO). I completed a Bachelor’s degree in Computer Sciences in 2020. Passionate about technology, I have grown to love this field thanks to education, a first professional experience, and personal interest. I have experience in programming, DevOps, database management, agile methodologies, and software design.</span>
             </div>
         </div>
     </body>
