Configuring Netlify CMS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <title>Logan Farci</title>
@@ -7,6 +7,7 @@
         <meta name="keywords" content="Logan Farci, Java developer, Backend developer, Frontend, Java">
         <meta name="description" content="I am currently an Analyst Developer at Smals seconded the the Belgian National Employment Office (NEO). I completed a Bachelor’s degree in Computer Sciences in 2020. Passionate about technology, I have grown to love this field thanks to education, a first professional experience, and personal interest. I have experience in programming, DevOps, database management, agile methodologies, and software design.">
         <link rel="stylesheet" href="style.css">
+        <link href="admin/config.yml" type="text/yaml" rel="cms-config-url">
     </head>
     <body>
         <div class="centered raised card">
